Fix a pretty big oversight with geom and bbox...
They did nothing... now that actually work
